<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:orientation="horizontal">-->

        <!--<View-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="20" />-->

        <!--<ImageView-->
            <!--android:id="@+id/btn_pause_all"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:scaleType="centerInside"-->
            <!--android:src="@drawable/icon_play_pause"-->
            <!--android:onClick="onPauseAllClick"/>-->

        <!--<View-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="20" />-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/label_pitch"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/audio_pitch_value_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0" />

            <TextView
                android:id="@+id/pitch_value_of_audio_effects"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/label_voice"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/audio_voice_value_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0" />

            <TextView
                android:id="@+id/voice_value_of_audio_effects"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/label_background"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/audio_background_value_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0" />

            <TextView
                android:id="@+id/background_value_of_audio_effects"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/label_all"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/audio_effect_value_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"
                android:enabled="false"/>

            <TextView
                android:id="@+id/effect_value_of_audio_effects"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/label_useam"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/btn_amix"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:enabled="false"/>




        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_close_audio_effects"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@android:string/ok" />

</LinearLayout>
